# AgenticRAG

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  ingest.py  main.py  pyproject.toml  rag_agent.py  walkthrough.md
